test/memory/allocation/errors/align1-error.chpl
use CPtr;

var ptr = c_aligned_alloc(uint(8), 1, 100);
